Harvest Projection Table

--- a/2_Assessment.Rmd
+++ b/2_Assessment.Rmd
@@ -93,7 +93,7 @@ The second source is from the West Coast Groundfish Observer Program (WCGOP).  T
 Data on catch-per-unit-effort (CPUE) in mt/hr from the domestic fishery were combined for the INPFC Vancouver and Columbia areas (Table \ref{tab:CPUE_Summary}, from Gunderson [-@gunderson_population_1977]).  Although these data reflect catch rates for the US fleet, the highest catch rates coincided with the beginning of removals by the foreign fleet.  This suggest that, barring unaccounted changes in fishing efficiency during this period, the level of abundance was high at that time.  A CV of 0.40 was used in this assessment to be consistent with the CV observed in the survey data.
 
 ###Fishery Length And Age Data
-Biological data from commercial fisheries that caught `r spp` were extracted from PacFIN (PFSMFC) on \hl{XXXX}.  Lengths taken during port sampling in Oregon and Washington were used to calculate length and age compositions.  There were no biological data for `r spp` available within PacFIN.  The overwhelming majority of these data were collected from the mid-water and bottom trawl gear, but additional biological data were collected from non-trawl gear which was grouped together with trawl gear data. Tables \ref{tab:Comm_Lengths} and \ref{tab:Comm_Ages} show the number of trips and fish sampled, along with the calculated sample sizes.  Length and age data were acquired at the trip level, and then aggregated to the state level.  The sample sizes were calculated via the Stewart Method (Ian Stewart, pers comm, IPHC) which for commercial fishery data is:
+Biological data from commercial fisheries that caught `r spp` were extracted from PacFIN (PFSMFC) on May 4, 2017.  Lengths taken during port sampling in Oregon and Washington were used to calculate length and age compositions.  There were no biological data for `r spp` available within PacFIN.  The overwhelming majority of these data were collected from the mid-water and bottom trawl gear, but additional biological data were collected from non-trawl gear which was grouped together with trawl gear data. Tables \ref{tab:Comm_Lengths} and \ref{tab:Comm_Ages} show the number of trips and fish sampled, along with the calculated sample sizes.  Length and age data were acquired at the trip level, and then aggregated to the state level.  The sample sizes were calculated via the Stewart Method (Ian Stewart, pers comm, IPHC) which for commercial fishery data is:
 
 \begin{centering}
 
@@ -128,7 +128,7 @@ The above is also the median of the prior. The prior is defined as a lognormal w
 
 Examining all biological data sources, the sex ratio of young fish are within 5% of 1:1 by either length or age (Figures \ref{fig:sexratio} and \ref{fig:sexratio_Age}), and hence this assessment the sex ratio at birth was assumed to be 1:1.  This assessment assumed a logistic maturity-at-length curve based on analysis of 537 fish maturity samples collected from the NWFSC shelf-slope survey.  This is revised from the previous assessment which assumed maturity-at-age based on the work of Hannah and Parker [@hannah_age-modulated_2007].  Additionally, the new maturity-at-length curve is based on the estimate of functional maturity an approach that classifies rockfish maturity with developing oocytes as mature or immature based on the proportion of vitellogenin in the cytoplasm and the measured frequency of atretic cells (M. Head, pers comm, NWFSC, NOAA).  The 50% size-at-maturity was estimated at 32.1 cm with maturity asymptoting to one for larger fish (Figure \ref{fig:mat}).  Comparison between the maturity-at-age used in the previous assessment and the updated functional maturity-at-length is shown in Figure \ref{fig:mat_compare}.
 
-The fecundity-at-age has also been updated from the previous assessment based on new research.  Dick [-@dick_meta-analysis_2017] estimated new fecundity relationships for select West Coast stocks where fecundity for `r spp` was estimated equal to `r round(mod1$MGparmAdj$Eggs_scalar_Fem[1],12)`$L$^`r round(mod1$MGparmAdj$Eggs_exp_len_Fem[1],2)`^ in millions of eggs. Spawning output at length is shown in Figure \ref{fig:fecundity}.
+The fecundity-at-age has also been updated from the previous assessment based on new research.  Dick [-@dick_meta-analysis_2017] estimated new fecundity relationships for select West Coast stocks where fecundity for `r spp` was estimated equal to `r format(mod1$MGparmAdj$Eggs_scalar_Fem[1], scientific = TRUE)`$L$^`r round(mod1$MGparmAdj$Eggs_exp_len_Fem[1],2)`^ in millions of eggs. Spawning output at length is shown in Figure \ref{fig:fecundity}.
 
 
 ###Length-weight relationship
@@ -382,8 +382,8 @@ In regards to values of $R_0$, the negative log-likehood was minimized at approx
 ###Reference Points
 Reference points were calculated using the estimated selectivities and catch distribution among fleets in the most recent year of the model (`r LastYR - 1`). Sustainable total yields (landings plus discards) were `r Ref_pts_mod1[15,2]` mt when using an $SPR_{50\%}$ reference harvest rate and with a 95% confidence interval of `r `r Ref_pts_mod1[15,3]` mt based on estimates of uncertainty. The spawning output equivalent to 40% of the unfished spawning output ($SB_{40\%}$) was `r Ref_pts_mod1[7,2]` millions of eggs. The recent catches (landings plus discards) have been below the point estimate of potential long-term yields calculated using an $SPR_{50\%}$ reference point and the population has been increasing over the last decade.
 
-The predicted spawning biomass from the base model generally showed a sharp decline during the 1960s, steep increase above unfished equilibrium levels, followed by less of a decline until 2001 (Figure \ref{fig:ssb}). Since 2001, the spawning biomass has been increasing due to small catches, and recently, above average recruitment. The `r LastYR` spawning biomass relative to unfished equilibrium spawning biomass is above the target of 40% of unfished spawning biomass (Figure \ref{fig:depl}). The fishing intensity (relative 1-SPR) exceeded the current estimates of the harvest rate limit ($SPR_{50\%}$) throughout the 1960s as seen in Figure \ref{fig:1_SPR}. Recent exploitation rates on `r spp` were predicted to be much less than target levels. In recent years, the stock has experienced exploitation rates that have been below the target level while the biomass level has remained above the target level.
+The predicted spawning biomass from the base model generally showed a sharp decline during the 1960s, steep increase above unfished equilibrium levels, followed by less of a decline until 2001 (Figure \ref{fig:ssb}). Since 2001, the spawning biomass has been increasing due to small catches, and recently, above average recruitment. The `r LastYR` spawning biomass relative to unfished equilibrium spawning biomass is above the target of 40% of unfished spawning biomass (Figure \ref{fig:depl}). The fishing intensity (relative 1-SPR) exceeded the current estimates of the harvest rate limit ($SPR_{50\%}$) throughout the 1960s as seen in Figure \ref{fig:SPR}. Recent exploitation rates on `r spp` were predicted to be much less than target levels. In recent years, the stock has experienced exploitation rates that have been below the target level while the biomass level has remained above the target level.
 
-Table \ref{Ref_pts} shows the full suite of estimated reference points for the base model and Figure \ref{fig:Yield} shows the equilibrium curve based on a steepness value fixed at `r print(mod1$parameters[mod1$parameters$Label == "SR_BH_steep","Value"],2)`.
+Table \ref{tab:Ref_pts} shows the full suite of estimated reference points for the base model and Figure \ref{fig:yield} shows the equilibrium curve based on a steepness value fixed at `r print(mod1$parameters[mod1$parameters$Label == "SR_BH_steep","Value"],2)`.
 
 
