--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -1323,7 +1323,7 @@ survey data.
 Data}\label{fishery-length-and-age-data}
 
 Biological data from commercial fisheries that caught Pacific ocean
-perch were extracted from PacFIN (PFSMFC) on \hl{XXXX}. Lengths taken
+perch were extracted from PacFIN (PFSMFC) on May 4, 2017. Lengths taken
 during port sampling in Oregon and Washington were used to calculate
 length and age compositions. There were no biological data for Pacific
 ocean perch available within PacFIN. The overwhelming majority of these
@@ -1438,9 +1438,9 @@ The fecundity-at-age has also been updated from the previous assessment
 based on new research. Dick
 (\protect\hyperlink{ref-dick_meta-analysis_2017}{2017}) estimated new
 fecundity relationships for select West Coast stocks where fecundity for
-Pacific ocean perch was estimated equal to 0\(L\)\textsuperscript{4.98}
-in millions of eggs. Spawning output at length is shown in Figure
-\ref{fig:fecundity}.
+Pacific ocean perch was estimated equal to
+8.66e-10\(L\)\textsuperscript{4.98} in millions of eggs. Spawning output
+at length is shown in Figure \ref{fig:fecundity}.
 
 \subsubsection{Length-weight
 relationship}\label{length-weight-relationship}
@@ -2121,61 +2121,45 @@ spawning biomass relative to unfished equilibrium spawning biomass is
 above the target of 40\% of unfished spawning biomass (Figure
 \ref{fig:depl}). The fishing intensity (relative 1-SPR) exceeded the
 current estimates of the harvest rate limit (\(SPR_{50\%}\)) throughout
-the 1960s as seen in Figure \ref{fig:1_SPR}. Recent exploitation rates
-on Pacific ocean perch were predicted to be much less than target
-levels. In recent years, the stock has experienced exploitation rates
-that have been below the target level while the biomass level has
-remained above the target level.
+the 1960s as seen in Figure \ref{fig:SPR}. Recent exploitation rates on
+Pacific ocean perch were predicted to be much less than target levels.
+In recent years, the stock has experienced exploitation rates that have
+been below the target level while the biomass level has remained above
+the target level.
 
-Table \ref{Ref_pts} shows the full suite of estimated reference points
-for the base model and Figure \ref{fig:Yield} shows the equilibrium
-curve based on a steepness value fixed at 0.50.
+Table \ref{tab:Ref_pts} shows the full suite of estimated reference
+points for the base model and Figure \ref{fig:yield} shows the
+equilibrium curve based on a steepness value fixed at 0.50.
 
 \section{Harvest Projections and Decision
 Tables}\label{harvest-projections-and-decision-tables}
 
-Table \ref{tab:mnmgt_perform}
+A twelve year projection of the base model with catches equal to the
+estimated ACL for years 2019-2028 and a catch allocation equal to the
+percentages for each fleet over the period of 2014-2016 predicts an
+increase in the spawning output due to large 2008 cohort, with a slight
+downturn beginning in 2023 (Table \ref{tab:Forecast_mod1}).
 
-\textbf{Model 1 Projections and Decision Table (groundfish only)} (Table
-\ref{tab:Forecast_mod1}
+\hl{Add additional projection post STAR based upon the decision table.}
 
-Table \ref{tab:Decision_table_mod1}
-
-\textbf{Model 2 Projections and Decision Table (groundfish only)}
-
-\textbf{Model 3 Projections and Decision Table (groundfish only)}
+Table \ref{tab:Decision_table_mod1_back}
 
 \section{Regional Management
 Considerations}\label{regional-management-considerations}
 
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
-\tightlist
-\item
-  For stocks where current practice is to allocate harvests by
-  management area, a recommended method of allocating harvests based on
-  the distribution of biomass should be provided. The MT advisor should
-  be consulted on the appropriate management areas for each stock.
-\item
-  Discuss whether a regional management approach makes sense for the
-  species from a biological perspective.
-\item
-  If there are insufficient data to analyze a regional management
-  approach, what are the research and data needs to answer this
-  question?
-\end{enumerate}
-
 \section{Research Needs}\label{research-needs}
 
+There are many areas of research that could be improved to benefit the
+understanding and assessment of Pacific ocean perch. Below, are issues
+that are considered of the importance.
+
 \begin{enumerate}
 
-\item Research need No. 1
+\item \textbf{Natural mortality}: Uncertainty in natural mortality translates into uncertain estimates of status and sustainable fishing levels for Pacific ocean perch. The collection of additional age data, re-reading of older age samples, reading old age samples that are unread, and improved understanding of the life-history of Pacific ocean perch may reduce that uncertainty.
 
-\item Research need No. 2
+\item \textbf{Steepness}: The amount of stock resilience, steepness, dictates the rate at which a stock can rebuild from low stock sizes.  Improved understanting regarding the steepness of US west coast Pacific ocean perch will reduce our uncertainty regarding current stock status.
 
-\item Research need No. 3
-
-\item etc.
+\item \textbf{Basin-wide understanding of stock structure, biology, connectivity, and distribution:} This is a stock assessment for Pacific ocean perch off of the west coast of the US and does not consider data from British Columbia or Alaska. Further investigating and comparing the data and predictions from British Columbia and Alaska to determine if there are similarities with the US west Ccast observations would help to define the connectivity between Pacific ocean perch north and south of the U.S.-Canada border.
 
 \end{enumerate}
 
@@ -3551,6 +3535,77 @@ Year & OFL (mt) & ACL (mt) & Age 3+ biomass (mt) & Spawning Output & Depletion \
 
 \FloatBarrier
 
+\begin{table}[ht]
+\centering
+\caption{Summary of 10-year 
+                                             projections beginning in 2019 
+                                             for alternate states of nature based on 
+                                             an axis of uncertainty for the base model. 
+                                             Columns range over low, mid, and high
+                                             states of nature, and rows range over different 
+                                             assumptions of catch levels. An entry of "--" 
+                                             indicates that the stock is driven to very low 
+                                             abundance under the particular scenario.} 
+\label{tab:Decision_table_mod1_back}
+\scalebox{0.85}{
+\begin{tabular}{l|cc|>{\centering}p{.7in}c|>{\centering}p{.7in}c|>{\centering}p{.7in}c}
+   \multicolumn{3}{c}{}  &  \multicolumn{2}{c}{} 
+                               & \multicolumn{2}{c}{\textbf{States of nature}} 
+                               & \multicolumn{2}{c}{} \\
+  \multicolumn{3}{c}{}  &  \multicolumn{2}{c}{Low State of Nature} 
+                               & \multicolumn{2}{c}{Base State of Nature} 
+                               &  \multicolumn{2}{c}{High State of Nature} \\
+ \hline
+ & Year & Catch & Spawning Output & Depletion & Spawning Output & Depletion & Spawning Output & Depletion \\ 
+  \hline
+ & 2019 & - & - & - & - & - & - & - \\ 
+   & 2020 & - & - & - & - & - & - & - \\ 
+   & 2021 & - & - & - & - & - & - & - \\ 
+  Catch Option 1 & 2022 & - & - & - & - & - & - & - \\ 
+   & 2023 & - & - & - & - & - & - & - \\ 
+   & 2024 & - & - & - & - & - & - & - \\ 
+   & 2025 & - & - & - & - & - & - & - \\ 
+   & 2026 & - & - & - & - & - & - & - \\ 
+   & 2027 & - & - & - & - & - & - & - \\ 
+   & 2028 & - & - & - & - & - & - & - \\ 
+   \hline
+ & 2019 & - & - & - & - & - & - & - \\ 
+   & 2020 & - & - & - & - & - & - & - \\ 
+   & 2021 & - & - & - & - & - & - & - \\ 
+  Catch Option 2 & 2022 & - & - & - & - & - & - & - \\ 
+   & 2023 & - & - & - & - & - & - & - \\ 
+   & 2024 & - & - & - & - & - & - & - \\ 
+   & 2025 & - & - & - & - & - & - & - \\ 
+   & 2026 & - & - & - & - & - & - & - \\ 
+   & 2027 & - & - & - & - & - & - & - \\ 
+   & 2028 & - & - & - & - & - & - & - \\ 
+   \hline
+ & 2019 & - & - & - & - & - & - & - \\ 
+   & 2020 & - & - & - & - & - & - & - \\ 
+   & 2021 & - & - & - & - & - & - & - \\ 
+  Catch Option 3 & 2022 & - & - & - & - & - & - & - \\ 
+   & 2023 & - & - & - & - & - & - & - \\ 
+   & 2024 & - & - & - & - & - & - & - \\ 
+   & 2025 & - & - & - & - & - & - & - \\ 
+   & 2026 & - & - & - & - & - & - & - \\ 
+   & 2027 & - & - & - & - & - & - & - \\ 
+   & 2028 & - & - & - & - & - & - & - \\ 
+   \hline
+ & 2019 & - & - & - & - & - & - & - \\ 
+   & 2020 & - & - & - & - & - & - & - \\ 
+   & 2021 & - & - & - & - & - & - & - \\ 
+  Average & 2022 & - & - & - & - & - & - & - \\ 
+  Catch & 2023 & - & - & - & - & - & - & - \\ 
+   & 2024 & - & - & - & - & - & - & - \\ 
+   & 2025 & - & - & - & - & - & - & - \\ 
+   & 2026 & - & - & - & - & - & - & - \\ 
+   & 2027 & - & - & - & - & - & - & - \\ 
+   & 2028 & - & - & - & - & - & - & - \\ 
+   \hline
+\end{tabular}
+}
+\end{table}
+
 \clearpage
 
 \section{Figures}\label{figures}
@@ -4629,19 +4684,28 @@ mortality. \label{fig:m_trajectory}}
 
 \FloatBarrier
 
-{[}Estimated spawning potential ratio (1-SPR)/(1-SPR50\%) for the
+\begin{figure}
+\centering
+\includegraphics{r4ss/plots_mod1/SPR3_ratiointerval.png}
+\caption{Estimated spawning potential ratio (1-SPR)/(1-SPR50\%) for the
 base-case model. One minus SPR is plotted so that higher exploitation
 rates occur on the upper portion of the y-axis. The management target is
 plotted as a red horizontal line and values above this reflect harvests
 in excess of the overfishing proxy based on the SPR50\% harvest rate.
-Thelast year in the time series is 2016. \label{fig:1_SPR}{]}
-(r4ss/plots\_mod1/SPR3\_ratiointerval.png)
+The last year in the time series is 2016. \label{fig:SPR}}
+\end{figure}
 
 \FloatBarrier
 
-{[}Equilibrium yield curve for the base case model. Values are based on
-2016 fishery selectivty and with steepness fixed at 0.50.
-\label{fig:yield}{]} (r4ss/plots\_mod1/yield1\_yield\_curve.png)
+\begin{figure}
+\centering
+\includegraphics{r4ss/plots_mod1/yield1_yield_curve.png}
+\caption{Equilibrium yield curve for the base case model. Values are
+based on the 2016 fishery selectivity and with steepness fixed at 0.50.
+\label{fig:yield}}
+\end{figure}
+
+\FloatBarrier
 
 \newpage
 
