--- a/7_Tables.Rmd
+++ b/7_Tables.Rmd
@@ -1494,7 +1494,53 @@ print(Forecast_mod1.table,
 <!-- ********************************************************************** -->
 <!-- ************************MODEL 2 TABLES******************************** --> 
 <!-- ********************************************************************** -->
-  
+```{r, results = 'asis'}
+
+# Read in decision table file
+  decision_mod1 = read.csv('./txt_files/DecisionTable_mod1.csv')
+       colnames(decision_mod1) = c('', 
+                                   'Year',  
+                                   'Catch',	
+                                   'Spawning Output',	
+                                   'Depletion', 
+                                   'Spawning Output',	
+                                   'Depletion',	
+                                   'Spawning Output',	
+                                   'Depletion')
+      
+       decision_mod1.table = xtable(decision_mod1, 
+                                    caption = c(paste('Summary of 10-year 
+                                             projections beginning in ', LastYR+2,' 
+                                             for alternate states of nature based on 
+                                             an axis of uncertainty for the base model. 
+                                             Columns range over low, mid, and high
+                                             states of nature, and rows range over different 
+                                             assumptions of catch levels. An entry of "--" 
+                                             indicates that the stock is driven to very low 
+                                             abundance under the particular scenario.', sep = '')), 
+                                     label='tab:Decision_table_mod1_back')
+      
+    # Assign alignment and add the header columns
+        align(decision_mod1.table) = c('l','l|','c','c|','>{\\centering}p{.7in}','c|','>{\\centering}p{.7in}','c|','>{\\centering}p{.7in}','c') 
+    
+        addtorow <- list()
+        addtorow$pos <- list()
+        addtorow$pos[[1]] <- -1
+        addtorow$pos[[2]] <- -1
+        addtorow$command <- c( ' \\multicolumn{3}{c}{}  &  \\multicolumn{2}{c}{} 
+                               & \\multicolumn{2}{c}{\\textbf{States of nature}} 
+                               & \\multicolumn{2}{c}{} \\\\\n', 
+                               ' \\multicolumn{3}{c}{}  &  \\multicolumn{2}{c}{Low State of Nature} 
+                               & \\multicolumn{2}{c}{Base State of Nature} 
+                               &  \\multicolumn{2}{c}{High State of Nature} \\\\\n')
+        
+    print(decision_mod1.table, add.to.row = addtorow, include.rownames = FALSE, 
+          caption.placement = 'top', 
+          hline.after = c(-1, 0, 10, 20, 30, nrow(decision_mod1.table)), 
+          scalebox = .85)
+
+
+```
   
   
 <!-- ********************************************************************** -->
